# bulkreq

./: Cargo.toml  README.md
src/: main.rs
test/: test_cases
